--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -247,7 +247,7 @@
                 };
                 $.post("/api/friends", userData, function (data) {
                     $("#match-name").text(data.name);
-                    $("#match-img").attr("src", date.photo);
+                    $("#match-img").attr("src", data.photo);
                     $("#results-modal").modal("toggle");
                 });
             } else {
